2014-02-24  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Intern symlink_wrap, link_wrap, readlink_wrap.

	* stream.c (symlink_wrap, link_wrap, readlink_wrap): New functions.

	* stream.h (symlink_wrap, link_wrap, readlink_wrap): Declared.

	* txr.1: Documented.

2014-02-24  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register forgotten s_ifsock variable.
	Register mkdir_wrap, chdir_wrap, getcwd_wrap, makedev_wrap, minor_wrap,
	major_wrap and mknod_wrap.

	* stream.c (mkdir_wrap, chdir_wrap, getcwd_wrap, makedev_wrap,
	minor_wrap, major_wrap, mknod_wrap): New functions.
	(stream_init): Initialize forgotten variable s-ifsock.

	* stream.h (s_ifsock): Declared.
	(mkdir_wrap, chdir_wrap, getcwd_wrap, makedev_wrap,
	minor_wrap, major_wrap, mknod_wrap): Declared.

	* txr.1: Forgotten documentation for remove-path and rename-path
	added. Forgotten mention of s-ifsock. Documented new Unix functions.

2014-02-24  Kaz Kylheku  <kaz@kylheku.com>

	* parser.l: Support octal and binary numbers.

	* txr.1: Documented.

	* genvim.txr, txr.vim: Updated.

2014-02-24  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (modifiers): Bugfix: list element not subject to expansion
	of Lisp forms denoted by @.
	(expand_meta): Bugfix: failure to expand vars, which can be
	symbol macros now.

2014-02-24  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (obj_print, obj_pprint): Render quasi-quote hash and
	vector literals using their original notation.

	* parser.y (unquotes_occur): Takes new argument, level. 
	Only finds quotes which are at the given quasiquoting level.
	Finally, this is the right semantics. In the first version of this
	function, we were not eager enough: we neglected to find unquotes
	that were wrapped in nested quasiquotes. Then we were too eager:
	finding any unquotes, even ones belonging to the inner backquotes.
	(vector, hash, choose_quote): Pass zero to unquotes_occur function.

2014-02-24  Kaz Kylheku  <kaz@kylheku.com>
